bunch of changes and improvements

--- a/src/app/components/assets/css/player.css
+++ b/src/app/components/assets/css/player.css
@@ -38,3 +38,17 @@ body {
     background-image: linear-gradient(135deg, rgba(0, 0, 0, .5) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, .5) 50%, rgba(0, 0, 0, .5) 75%, transparent 75%, transparent);
     background-size: 20px 20px;
 }
+
+.album-cover::before {
+    content: close-quote;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transform: scale(1.03);
+    background-size: cover;
+    background-position: center;
+    filter: blur(10px);
+    z-index: 0;
+}
