--- a/src/app/player/components/assets/css/player.css
+++ b/src/app/player/components/assets/css/player.css
@@ -26,17 +26,14 @@
 }
 
 body {
-    background-color: #a0a0a0;
+    background-image: conic-gradient(in hsl longer hue, red, yellow, lime, aqua, blue, magenta, red);
+    animation: spinbg 60s linear infinite;
+    backdrop-filter: blur(50px);
 }
 
 .album-cover img {
     z-index: 1;
     width: 100%;
-}
-
-#progress-bar {
-    background-image: linear-gradient(135deg, rgba(0, 0, 0, .5) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, .5) 50%, rgba(0, 0, 0, .5) 75%, transparent 75%, transparent);
-    background-size: 20px 20px;
 }
 
 .album-cover::before {
@@ -51,4 +48,14 @@ body {
     background-position: center;
     filter: blur(10px);
     z-index: 0;
+}
+
+@keyframes spinbg {
+    from {
+        background: conic-gradient(red, yellow, lime, aqua, blue, magenta, red);
+    }
+
+    to {
+        background: conic-gradient(from 359deg, red, yellow, lime, aqua, blue, magenta, red);
+    }
 }
